--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,12 @@
 			flex-basis: 60%;
 		}
 
+		.fl-40 {
+			display: flex;
+			flex-direction: column;
+			flex-basis: 40%;
+		}
+
 		.fl-25 {
 			display: flex;
 			flex-direction: column;
@@ -454,6 +460,14 @@
 		}
 		
 		.fl-50 {
+			flex-basis: 100%!important;
+		}
+
+		.fl-60 {
+			flex-basis: 100%!important;
+		}
+
+		.fl-40 {
 			flex-basis: 100%!important;
 		}
 
