--- a/css/style.css
+++ b/css/style.css
@@ -189,13 +189,13 @@
 		.fl-60 {
 			display: flex;
 			flex-direction: column;
-			flex-basis: 1 1 60%;
+			flex: 1 1 60%;
 		}
 
 		.fl-40 {
 			display: flex;
 			flex-direction: column;
-			flex-basis: 1 1 40%;
+			flex: 1 1 40%;
 		}
 
 		.fl-25 {
