--- a/css/style.css
+++ b/css/style.css
@@ -190,12 +190,14 @@
 			display: flex;
 			flex-direction: column;
 			flex: 1 1 60%;
+			min-width: 0;
 		}
 
 		.fl-40 {
 			display: flex;
 			flex-direction: column;
 			flex: 1 1 40%;
+			min-width: 0;
 		}
 
 		.fl-25 {
