--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@
 			background-color: #F4F4F4;
 		}
 
+		.dark-white-2 {
+			background-color: #FCFCFC;
+		}
+
 		.grey {
 			background-color: #1a1a1a;
 		}
