--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,55 @@
 		/* GLOBAL */
 
+		/* Regular */
+		@font-face {
+			font-family: "Alliance No.2";
+			src: url("../fonts/AllianceNo2-Regular.ttf") format("truetype");
+			font-weight: 400;
+			font-style: normal;
+		}
+
+		/* Regular Italic */
+		@font-face {
+			font-family: "Alliance No.2";
+			src: url("../fonts/AllianceNo2-RegularItalic.ttf") format("truetype");
+			font-weight: 400;
+			font-style: italic;
+		}
+
+		/* Medium */
+		@font-face {
+			font-family: "Alliance No.2";
+			src: url("../fonts/AllianceNo2-Medium.ttf") format("truetype");
+			font-weight: 500;
+			font-style: normal;
+		}
+
+		/* Medium Italic */
+		@font-face {
+			font-family: "Alliance No.2";
+			src: url("../fonts/AllianceNo2-MediumItalic.ttf") format("truetype");
+			font-weight: 500;
+			font-style: italic;
+		}
+
+		/* Bold */
+		@font-face {
+			font-family: "Alliance No.2";
+			src: url("../fonts/AllianceNo2-Bold.ttf") format("truetype"),
+				url("../fonts/Alliance No.2 Bold.otf") format("opentype");
+			font-weight: 700;
+			font-style: normal;
+		}
+
+		/* Bold Italic */
+		@font-face {
+			font-family: "Alliance No.2";
+			src: url("../fonts/AllianceNo2-BoldItalic.ttf") format("truetype");
+			font-weight: 700;
+			font-style: italic;
+		}
+
+
 		body {
 			margin: auto;
 			width: 100%;
