--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,17 @@
 			font-style: italic;
 		}
 
-
 		body {
 			margin: auto;
 			width: 100%;
-			font-size: 28px;
+			font-size: 1.75rem;
 			font-family: "Alliance No.2", Helvetica, sans-serif;
 			background-color: #F5F3F1;
+		}
+
+		html {
+			font-family: "Alliance No.2", sans-serif;
+			font-size: 16px; /* base size */
 		}
 
 		h1, h2, h3, h4, h5, h6, p, li {
@@ -63,64 +67,64 @@
 		}
 
 		h1 {
-			font-size: 60px;
+			font-size: 3.75rem;
 			line-height: 1.3em;
 		}
 
 		h2 {
-			font-size: 36px;
-			line-height: 50px;
+			font-size: 2.25rem;
+			line-height: 3.125rem;
 			font-weight: 700;
-			margin-top: 20px;
-			margin-bottom: 20px;
+			margin-top: 1.25rem;
+			margin-bottom: 1.25rem;
 		}
 
 		h2.big {
-			font-size: 50px;
+			font-size: 3.125rem;
 			line-height: 122%;
 			font-weight: 700;
-			margin-top: 20px;
-			margin-bottom: 20px;
+			margin-top: 1.25rem;
+			margin-bottom: 1.25rem;
 		}
 
 		h2.section-intro {
-			font-size: 41px;
+			font-size: 2.5625rem;
 			line-height: 122%;
 			font-weight: 700;
-			margin-top: 20px;
-			margin-bottom: 20px;
+			margin-top: 1.25rem;
+			margin-bottom: 1.25rem;
 		}
 		
 		h2.huge {
 			font-size: 7.7rem;
-			margin-bottom: 53px;
+			margin-bottom: 3.3125rem;
 		}
 
 		h4 {
-			font-size: 20px;
+			font-size: 1.25rem;
 			line-height: 1.3em;
 			font-weight: 600;
-			margin-bottom: 20px;
+			margin-bottom: 1.25rem;
 		}
 
 		h5 {
-			font-size: 20px;
+			font-size: 1.25rem;
 			line-height: 1.3em;
 			font-weight: 600;
 			margin-top: 0px;
-			margin-bottom: 60px;
+			margin-bottom: 3.75rem;
 			text-transform: uppercase;
 		}
 
 		h5.section-intro {
-			margin-bottom: 20px;
+			margin-bottom: 1.25rem;
 		}
 
 		h3 {
-			font-size: 23px;
+			font-size: 1.4375rem;
 			line-height: 1.3em;
 			font-weight: 600;
-			margin-bottom: 20px;
+			margin-bottom: 1.25rem;
 		}
 
 		p {
@@ -131,7 +135,7 @@
 		}
 
 		p.big {
-			font-size: 26px;
+			font-size: 1.1875rem;
 			line-height: 1.9em;
 			margin-top: 0px;
 			font-weight: 300;
@@ -146,20 +150,20 @@
 		}
 
 		.padding {
-		 	padding: 10px;
+		 	padding: 0.625rem;
 		}
 
 		.big-pad {
-		 	padding: 60px;
+		 	padding: 3.75rem;
 		}
 
 		.marg {
-			margin: 20px;
+			margin: 1.25rem;
 		}
 
 		.shad {
 			box-shadow: #00000040 0px 4px 3px 0px;
-			border-radius: 11px;
+			border-radius: 0.6875rem;
 		}
 
 		.t-l {
@@ -298,13 +302,13 @@
 		.container {
 		 	max-width: 1320px;
 		 	width: 100%;
-		 	padding: 30px;
+		 	padding: 1.875rem;
 		}
 
 		.container-2 {
 		 	max-width: 1220px;
 		 	width: 100%;
-		 	padding: 30px;
+		 	padding: 1.875rem;
 		}
 
 		.h-cont {
@@ -330,16 +334,16 @@
 		}
 
 		.col-r {
-			padding: 50px 0px 50px 50px;
-			margin-top: 20px;
+			padding: 3.125rem 0px 3.125rem 3.125rem;
+			margin-top: 1.25rem;
 		}
 
 		.stat {
-			margin: 33px 33px 93px 33px;
+			margin: 2.0625rem 2.0625rem 6.1875rem 2.0625rem;
 		}
 
 		.about-photo {
-			padding: 67px;
+			padding: 4.1875rem;
 		}
 
 
@@ -368,9 +372,9 @@
 		#navbar a {
 		 	display: block;
 		 	text-align: center;
-		 	padding: 20px 26px;
+		 	padding: 1.25rem 1.625rem;
 		 	text-decoration: none;
-		 	font-size: 17px;
+		 	font-size: 1rem;
 		 	color: white;
 		}
 
@@ -397,7 +401,7 @@
 		}
 
 		.card {
-		 	margin: 50px;
+		 	margin: 3.125rem;
 		 	max-width: 550px;
 		}
 
@@ -409,8 +413,8 @@
 		.card > h3 {
 			font-family: "Alliance No.2";
 			color: black;
-			font-size: 28px;
-			margin-bottom: 2px;
+			font-size: 1.75rem;
+			margin-bottom: 0.125rem;
 		}
 
 		.card > p {
@@ -434,22 +438,22 @@
 		/* PROJECT */
 
 		#hero {
-			padding: 80px 0px;
+			padding: 5rem 0px;
 		}
 
 		#intro {
 			min-height: 110vh;
-			padding: 80px 0px;
+			padding: 5rem 0px;
 		}
 
 		#about-intro {
-			padding: 60px 0px 0px 0px;
+			padding: 3.75rem 0px 0px 0px;
 			color: white;
 			background-color: #0a0a0a;
 		}
 
 		.callout {
-			padding: 80px 0px;
+			padding: 5rem 0px;
 		}
 
 		#about-photos {
@@ -458,48 +462,48 @@
 
 		#pain-points {
 			min-height: 90vh;
-			padding: 80px 0px;
+			padding: 5rem 0px;
 		}
 
 		#research {
-			padding: 80px 0px;
+			padding: 5rem 0px;
 			color: white;
 		}
 
 		#outcomes {
 			min-height: 90vh;
-			padding: 80px 0px;
+			padding: 5rem 0px;
 			background-color: #0a0a0a;
 			color: white;
 		}
 
 		#results {
-			padding: 80px 0px;
+			padding: 5rem 0px;
 			background-color: #111;
 			color: white;
 		}
 
 		#reflective {
-			padding: 80px 0px;
+			padding: 5rem 0px;
 		}
 
 		#events {
 			min-height: 90vh;
-			padding: 40px 0px;
+			padding: 2.5rem 0px;
 			color: white;
 		}
 
 		#committees {
 			min-height: 90vh;
-			padding: 40px 0px;
+			padding: 2.5rem 0px;
 			color: black;
 		}
 
 		.blue-call {
-			padding: 40px 60px;
-			border-radius: 10px;
+			padding: 2.5rem 3.75rem;
+			border-radius: 0.625rem;
 			background-color: #c5e7ff;
-			margin-bottom: 20px;
+			margin-bottom: 1.25rem;
 		}
 
 
@@ -536,7 +540,7 @@
 		}
 
 		h5 {
-			margin-bottom: 17px;
+			margin-bottom: 1rem;
 		}
 
 		}
