--- a/css/style.css
+++ b/css/style.css
@@ -544,3 +544,19 @@
 		}
 
 		}
+
+		@media only screen and (max-width: 500px) {
+
+		h1 {
+			font-size: 2.5rem;
+		}
+
+		h5 {
+			margin-bottom: 1rem;
+		}
+
+		.card {
+			margin: 10px;
+		}
+
+		}
