--- a/css/style.css
+++ b/css/style.css
@@ -547,12 +547,33 @@
 
 		@media only screen and (max-width: 500px) {
 
+		.container, .container-2 {
+			padding: 0px;
+		}
+
+		.wrapper {
+			width: 100%;
+		}
+
+		#navbar {
+			display: block;
+		}
+
 		h1 {
 			font-size: 2.5rem;
 		}
 
-		h5 {
-			margin-bottom: 1rem;
+		h2.huge {
+			font-size: 2.5rem;
+			margin-bottom: 1rem;;
+		}
+
+		.stat {
+			margin: 0.5rem;
+		}
+
+		.about-photo {
+			padding: 0px;
 		}
 
 		.card {
