--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@
 		.container {
 		 	max-width: 1320px;
 		 	width: 100%;
-		 	padding: 1.875rem;
+		 	margin: 1.875rem;
 		}
 
 		.container-2 {
@@ -509,7 +509,7 @@
 
 		/* ADDITIONAL CSS */
 
-		@media only screen and (max-width: 800px) {
+		@media only screen and (max-width: 1000px) {
 		
 		.flex-box {
 			flex-direction: column!important;
@@ -543,12 +543,26 @@
 			margin-bottom: 1rem;
 		}
 
+		.stat {
+			margin: 1.5rem;
+		}
+
+		h2.huge {
+			font-size: 4.5rem;
+			margin-bottom: 1rem;;
+		}
+
+		.container, .container-2 {
+			padding: 0px;
+		}
+
 		}
 
 		@media only screen and (max-width: 500px) {
 
 		.container, .container-2 {
 			padding: 0px;
+			margin: 0px;
 		}
 
 		.wrapper {
