--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,18 @@
 			margin-bottom: 1.25rem;
 		}
 
+		footer {
+			background-color: #000;
+			padding: 4.777rem 10px;
+			color: white;
+		}
+
+		.foot-menu > a {
+			font-size: 1.111rem;
+			color: white;
+			margin-bottom: 1.222rem;
+		}
+
 
 		/* ADDITIONAL CSS */
 
@@ -586,6 +598,15 @@
 
 		.home-logo {
 			margin-bottom: 0.8rem;
+		}
+
+		.fl-80, .fl-20 {
+			width: 100%;
+			flex-basis: 100%;
+		}
+
+		footer {
+			padding: 1rem;
 		}
 
 		}
