--- a/css/style.css
+++ b/css/style.css
@@ -317,9 +317,9 @@
 		/* CONTAINERS */
 
 		.container {
-		 	max-width: 2020px;
+		 	max-width: 100vw;
 		 	width: 100%;
-		 	margin: 1rem;
+		 	margin: 0rem 1rem;
 		}
 
 		.container-2 {
@@ -478,8 +478,7 @@
 		}
 
 		.proj-buttons-cont {
-			padding: 0px 1rem;
-			margin-top: -0.5rem;
+			margin: 1rem 1.222rem -0.555rem 1.222rem;
 		}
 
 		:target {
