--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,6 @@
 		html {
 			font-family: "Alliance No.2", sans-serif;
 			font-size: 16px; /* base size */
-			scroll-behavior: smooth;
 		}
 
 		h1, h2, h3, h4, h5, h6, p, li {
@@ -700,7 +699,12 @@
 
 		h2.huge {
 			font-size: 3.888rem;
-			margin-bottom: 1rem;;
+			margin-bottom: 1rem;
+		}
+
+		h2.big {
+			font-size: 2rem;
+			margin-bottom: 1rem;
 		}
 
 		.stat {
